SimpleNotificationControllerRobolectricTest.kt, SoftKeyboardControllerRobolectricTest.kt, TryCatchExtensionsTest.kt, VibratorControllerRobolectricTest.kt 추가