@@ -69,6 +69,10 @@ android {
     testOptions {
         unitTests {
             isIncludeAndroidResources = true
+            all {
+                val currentArgs = it.jvmArgs ?: emptyList()
+                it.jvmArgs = currentArgs + "-XX:+EnableDynamicAgentLoading"
+            }
         }
     }
 }
@@ -179,9 +183,8 @@ kover {
                 classes("kr.open.library.simple_ui.system_manager.controller.alarm.AlarmController*")
                 classes("kr.open.library.simple_ui.system_manager.controller.alarm.receiver.BaseAlarmReceiver*")
                 classes("kr.open.library.simple_ui.system_manager.controller.alarm.vo.AlarmVo*")
-                classes("kr.open.library.simple_ui.system_manager.controller.notification.SimpleNotificationController*")
-                classes("kr.open.library.simple_ui.system_manager.controller.softkeyboard.SoftKeyboardController*")
-                classes("kr.open.library.simple_ui.system_manager.controller.vibrator.VibratorController*")
+//                classes("kr.open.library.simple_ui.system_manager.controller.notification.SimpleNotificationController*")
+//                classes("kr.open.library.simple_ui.system_manager.controller.vibrator.VibratorController*")
                 classes("kr.open.library.simple_ui.system_manager.controller.wifi.WifiController*")
                 classes("kr.open.library.simple_ui.system_manager.controller.window.FloatingViewController*")
                 classes("kr.open.library.simple_ui.system_manager.controller.window.drag.FloatingDragView*")
